# finite-resource

./: LICENSE  README.md  pyproject.toml
finite_resource/: __init__.py
tests/: test_init.py  test_readme.py
